--- a/public/mockup/styles/_forms.sass
+++ b/public/mockup/styles/_forms.sass
@@ -161,7 +161,7 @@ $dropdown_width: 140px
       a
         position: relative
         display: block
-        padding: 5px 0 0 10px
+        padding: 5px 0 0 8px
         background: $clr_gray_15
         color: $clr_gray_80
         height: 21px
@@ -174,7 +174,8 @@ $dropdown_width: 140px
           border-left-color: $white
     .separator
       border: none
-      height: 4px
+      line-height: 0
+      height: 0
       background: $clr_gray_30
       background-image: none
       max-width: $dropdown_width - 20px
@@ -218,7 +219,7 @@ $dropdown_width_short: 115px
   +rounded(3px)
   border: $brd_gray
   padding: 4px 4px 4px 43px
-  width: 144px
+  width: 147px
   font-size: 12px
   display: block
   float: left
