--- a/public/mockup/styles/_threads.sass
+++ b/public/mockup/styles/_threads.sass
@@ -23,6 +23,7 @@
       top: 5px
       bottom: 7px
     .task_status
+      display: inline-block
       margin-right: 5px
     span.assigned_date, span.assigned_to
       display: none
