--- a/public/mockup/styles/_shared.sass
+++ b/public/mockup/styles/_shared.sass
@@ -24,7 +24,7 @@ $clr_gray_30: #c9c9c9
 $clr_gray_40: #b5b5b5
 $clr_gray_50: #a0a0a0
 $clr_gray_60: #898989
-
+$clr_gray_70: #707070
 $clr_gray_80: #535353
 $clr_gray_90: #313131
 $brd_gray: 1px solid $clr_gray_50
