--- a/public/mockup/styles/_tasks.sass
+++ b/public/mockup/styles/_tasks.sass
@@ -138,8 +138,7 @@ form.new_task, form.edit_task, .task_list_form
     float: left
     clear: left
     position: relative
-    background: $clr_gray_10
-    //+gradient(#fcfcfc, #eee)
+    background: $clr_gray_15
     border: 1px solid $clr_gray_50
     border-radius: 5px
     //box-shadow: #EEE 1px 1px 1px
@@ -162,7 +161,7 @@ form.new_task, form.edit_task, .task_list_form
       height: 20px
       padding: 0
         top: 2px
-      margin: 10px 14px 0 10px
+      margin: 9px 14px 0 10px
       display: block
       float: left
       clear: both
@@ -185,7 +184,7 @@ form.new_task, form.edit_task, .task_list_form
     .status
       background: #fce69c
       color: white
-      padding: 0 3px
+      padding: 1px 3px
       text-transform: uppercase
       font-size: 11px
       +rounded(2px)
@@ -197,26 +196,86 @@ form.new_task, form.edit_task, .task_list_form
       overflow: hidden
       text-align: center
       color: $clr_gray_80
-      margin: 11px 10px 0 0
+      margin: 10px 10px 0 0
       min-width: 53px
+    // NEW
     &.status_0
+      +gradient($clr_gray_05, $clr_gray_15)
       .status
         border-color: #8397a1
         background-color: #bbd8e6
+      .taskName
+        font-weight: bold
+        a
+          color: $clr_gray_90
+        .extended
+          font-weight: normal
+    // OPEN
     &.status_1
+      +gradient($clr_gray_05, $clr_gray_15)
       .status
+        color: #857952
         //background: $clr_gray_30
         //border-color: $clr_gray_60
     // HOLD
     &.status_2
+      +gradient($clr_gray_05, $clr_gray_15)
       .status
         background: $clr_gray_30
         border-color: $clr_gray_60
+    // RESOLVED
     &.status_3
+      background-color: $clr_gray_20
+      .taskName
+        border-top-color: $clr_gray_10
+        a, .extended span a
+          color: $clr_gray_60
       .status
+        padding-right: 0
         text-transform: none
         background: none
         border: none
+        color: $clr_gray_50
+        text-align: right
+      .taskStatus
+        display: block
+        float: left
+        clear: none
+        height: 25px
+        width: 26px
+        margin: 5px 14px 0 8px
+        background: url(img_3_2/ico/tick-gray.png) no-repeat 7px 6px
+        .task_counter
+          display: none
+    &.status_4
+      background-color: $clr_gray_30
+      .taskName
+        border-top-color: $clr_gray_20
+        a, 
+          text-decoration: line-through
+          color: $clr_gray_60
+        .extended span a
+          color: $clr_gray_50
+          text-decoration: none
+      .status
+        padding-right: 0
+        text-transform: none
+        background: none
+        border: none
+        color: $clr_gray_50
+        text-align: right
+      .taskStatus
+        text-decoration: line-through
+        display: block
+        float: left
+        clear: none
+        height: 25px
+        width: 26px
+        margin: 5px 14px 0 8px
+        background: url(img_3_2/ico/slash-gray.png) no-repeat 7px 6px
+        .task_counter
+          display: none
+
     &.assigned
       .status
         min-width: 15px
@@ -228,12 +287,15 @@ form.new_task, form.edit_task, .task_list_form
       .task_drag
         display: inline-block
     .taskName
+      color: $clr_gray_50
       +rounded(4px)
       border-top: 1px solid $white
       min-height: 18px
       font-size: 12px
       padding-top: 4px
       //padding-left: 90px
+      a
+        color: $clr_gray_80
       span.assigned_date, span.assigned_user
         display: none
         color: rgb(100,100,100)
@@ -246,7 +308,7 @@ form.new_task, form.edit_task, .task_list_form
         border: solid 1px rgb(225,225,225)
         text-transform: uppercase
         a
-          color: rgb(100,100,100)
+          color: $clr_gray_50
         a:hover
           text-decoration: none
           color: rgb(0,0,0)
@@ -306,9 +368,12 @@ form.new_task, form.edit_task, .task_list_form
         display: block
         margin: 0 0 5px
         font-size: 11px
-        color: #555
+        color: $clr_gray_50
+        .task_list
+          margin-left: 3px
         a
-          color: #555
+          color: $clr_gray_50
+          margin-right: 3px
       .taskName
         a
           &.loading
@@ -418,16 +483,21 @@ p.assigned_transition
   clear: right
   background: $clr_gray_20
   color: white
-  padding: 0 3px
+  padding: 1px 3px
   font-size: 11px
   +rounded(2px)
   border: 1px solid $clr_gray_40
   line-height: 14px
   overflow: hidden
   text-align: right
-  color: $clr_gray_60
-  margin: 12px 0 0 7px
+  color: $clr_gray_80
+  margin: 11px 0 0 7px
 
+.late_date
+  color: $white
+  border: 1px solid #c63d43
+  background-color: #f14a52
+  
 p.view_for_all
   font-size: 12px
   margin: 10px 0
