Moving rendering of GoogleDocs view to Thread view :(
The reason:

CommentForm's el is the actual form tag.
GoogleDocs.el contains other forms so it can't be rendered within the
comment form.
Changing CommentForm.el to be a holding div is too much work as a lot of
code is dependent on CommentForm.el being a form.
So forced to move rendering to Thread though logically it should be
rendered from CommentForm.

--- a/app/templates/partials/comment.jade.erb
+++ b/app/templates/partials/comment.jade.erb
@@ -38,7 +38,15 @@
             a(href= self.downloadUrl(upload.id, upload.filename, "original"), class="link_to_upload", rel="facebox")
               img(alt="#{upload.description}", src=self.downloadUrl(upload.id, upload.filename, "thumb"))
 
-  // TODO: google docs
+    - if (self.google_docs && self.google_docs.length)
+      ul.google_docs_list
+        - each google_doc in self.google_docs
+          li.upload
+            span.file_icon.google_icon
+              img(src="/images/google_docs/icon_6_#{google_doc.document_type}.gif",alt=google_doc.document_type)
+            span.filename
+              a(href=self.google_docs_url(google_doc, self.project), target='blank')= google_doc.title
+
   div(id= 'email_post_' + self.id, style= 'width: 600px;display: none;')
     h1 <%= t('users.email_posts.title') %>
     p <%= t('users.email_posts.send_replies_with_this_email') %>
