--- a/app/templates/partials/task.jade.erb
+++ b/app/templates/partials/task.jade.erb
@@ -1,4 +1,5 @@
 // CLEANME: taskStatus is deprecated and hidden
+// TODO: should receive a model instead of attributes
 - var task = new Teambox.Models.Task(self);
 
 .taskStatus
@@ -34,12 +35,13 @@
 
 .thread(style= 'display:none;')
   .comments
-    - if (self.first_comment)
-      != self.partial('partials.comment', self.first_comment)
+    - if (self.comments_count)
+      - if (self.first_comment)
+        != self.partial('partials.comment', self.first_comment)
 
-    - if (self.hidden_comments_count)
-      .more_comments
-        a(href= '/activities/' + self.id + '/show_thread?thread_type=' + self.type)= 'Show ' + self.hidden_comments_count + ' previous comments'
+      - if (self.hidden_comments_count)
+        .more_comments
+          a(href= '/activities/' + self.id + '/show_thread?thread_type=' + self.type)= 'Show ' + self.hidden_comments_count + ' previous comments'
 
-    - each recent_comment in self.recent_comments
-      != self.partial('partials.comment', recent_comment)
+      - each recent_comment in self.recent_comments
+        != self.partial('partials.comment', recent_comment)
