task_list reordering working

--- a/app/templates/partials/task.jade.erb
+++ b/app/templates/partials/task.jade.erb
@@ -28,7 +28,7 @@
       - if (self.project)
         a(href= self.project.project_url)= self.project.name
       &rarr;
-    span.task_list
+    span.task_list_name
       a(href= self.task_list_url)= self.task_list.name
 
 .clear
