--- a/app/templates/task_lists/index.jade.erb
+++ b/app/templates/task_lists/index.jade.erb
@@ -2,4 +2,4 @@ a#reorder_task_lists(href= '#', style='display: inline-block;') Reorder Task Lis
 a#done_reordering_task_lists(style='display:none', href="#") Done reorder
 a#toggle_new_task_list(href= '#') New Task List
 
-.task_list_container
+#task_lists
