--- a/app/templates/task_lists/task_list.jade.erb
+++ b/app/templates/task_lists/task_list.jade.erb
@@ -1,2 +1,5 @@
-.head= self.task_list.get('name')
-.tasks.open
+.task_list(data-task-list-id=  self.task_list.id)
+  .head
+    img.task_drag(alt= 'Drag', src= '/images/drag.png')
+    = self.task_list.get('name')
+  .tasks.open
