--- a/app/styles/_tasks.sass
+++ b/app/styles/_tasks.sass
@@ -80,6 +80,7 @@ form.new_task, form.edit_task, .task_list_form
 
 .task_list_container
   margin: 10px 0 20px
+  max-width: 700px
   .task
     .title
       display: none
