--- a/app/templates/task_lists/task_list.jade.erb
+++ b/app/templates/task_lists/task_list.jade.erb
@@ -1,5 +1,52 @@
 .task_list(data-task-list-id=  self.task_list.id)
   .head
     img.task_drag(alt= 'Drag', src= '/images/drag.png')
-    = self.task_list.get('name')
+    span.task_list_name= self.task_list.get('name')
+
+    .actions_menu
+      span.actiondate No dates assigned
+      span.loading(style= 'display: none;') Loading...
+      img.triangle(alt= 'Triangle', src='/images/triangle.png?1285939525')
+      .extra
+        a.task_list_rename(href= '#') Rename task list
+        a.task_list_set_dates(href= '#') Set the start &amp; end date
+        a.task_list_resolve(href= '#', aconfirm='Are you sure you want to resolve and archive this task list?', action_url='/projects/test_project-20/task_lists/93220/archive?on_index=1') Resolve all tasks and archive
+        a.task_list_delete(href= '#', aconfirm='Are you sure you want to delete this task list?', action_url='/projects/test_project-20/task_lists/93220?on_index=1') Delete
+
+    // TODO: This is harcode!
+    form.task_list_form(accept-charset='UTF-8', style= 'display: none;overflow-x: visible;overflow-y: visible;')
+      input(name='utf8', type='hidden', value='✓')
+      input(name='_method', type='hidden', value='put')
+      input(id='on_index', name='on_index', type='hidden', value='1')
+
+      .name.text_field(style= 'display:none;')
+        label(for='task_list_name')
+          | Choose a name for this Task List 
+          i eg. Prepare a Prototype
+        input#task_list_name(autofocus='autofocus', name='task_list[name]', size='30', type='text', value='')
+
+      .date_fields(style= 'display:none;')
+        .pick_date
+          label(for= 'task_list_start_on')
+            | Starts on... 
+            i optional
+          .date_picker(id='task_list_103073_start_on')
+            img.calendar_date_select_popup_icon(alt='Calendar', src='/images/calendar_date_select/calendar.gif')
+            span.localized_date No date assigned
+            input.datepicker#task_list_start_on(name='task_list[start_on]', type='hidden')
+        .pick_date
+          label(for= 'task_list_finish_on')
+            | End on... 
+            i optional
+          .date_picker(id='task_list_103073_finish_on')
+            img.calendar_date_select_popup_icon(alt= 'Calendar', src='/images/calendar_date_select/calendar.gif')
+            span.localized_date No date assigned
+            input.datepicker#task_list_finish_on(name='task_list[finish_on]', type='hidden')
+
+      img.loading(alt= 'Loading', src= '/images/loading.gif', style= 'display: none')
+      div.submit
+        input.inline_form_update(name='commit', type='submit', value='Update Task List')
+        | or
+        a.inline_form_update_cancel(href='#') Cancel
+
   .tasks.open(id= 'project_' + self.task_list.get('project_id') + '_task_list_' + self.task_list.id + '_the_main_tasks')
